# rgrtu-admission-monitor

./: .dockerignore  .env.example  .env.tg.example  .gitignore  Caddyfile  Dockerfile  README.md  TZ_RGRTU_MAX_bot.md  docker-compose.bot.yml  docker-compose.tg.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: cli.py  config.py  main.py
app/admission/: estimator.py  historical.py  ranking.py  relative.py  zones.py
app/api/: health.py  max_webhook.py
app/bot/: commands.py  keyboards.py  max_client.py  messages.py  profile.py  user_settings.py
app/db/: models.py  repositories.py
app/jobs/: check_lists.py  retry_notifications.py  scheduler.py
app/observability/: logging.py
app/rgrtu/: base.py  browser_adapter.py  discovery.py  html_adapter.py  json_adapter.py  livewire_adapter.py  parser.py
app/tg/: client.py  runner.py
config/: telegram_allowed_chat_ids.txt
docs/: deployment.md  rgrtu-source-discovery.md  runbook.md  telegram-client-proxy.md  telegram.md
ops/: haproxy.cfg
scripts/: backup_db.sh  github_bootstrap.py  register_webhook.py  seed_programs.py
tests/fixtures/rgrtu/: competition_list_full.json
tests/unit/: test_check_lists.py  test_commands.py  test_discovery.py  test_estimator.py  test_historical.py  test_keyboards.py  test_livewire_adapter.py  test_messages.py  test_ranking.py  test_relative.py  test_tg.py  test_webhook.py
